# simple-grad

./: LICENSE  README.md  main.py  pyproject.toml  test_autograd.py  test_ops.py  test_tensor.py
src/simplegrad/: module.py  ops.py  tensor.py
tests/: test_autograd.py  test_module.py  test_ops.py  test_tensor.py
